Add local cache hit display on Task stats page.
Local cache is usable while working with multiple build directories, it
would be nice to see local cachehits on Task stats page.

Change-Id: I6f313304c568876bcd34904127ab211349f8f311

--- a/client/resources/compiler_proxy_status_html5.html
+++ b/client/resources/compiler_proxy_status_html5.html
@@ -155,6 +155,7 @@ Om1vZGlmeQAyMDE4LTExLTE5VDExOjAwOjQ2KzA5OjAwgDTzSQAAAABJRU5ErkJggg==
         <tr id="task-stats-request-success-finished"><td>finished</td><td><meter value="0"></meter></td><td class="text"></td></tr>
         <tr id="task-stats-request-success-aborted"><td>aborted</td><td><meter value="0"></meter></td><td class="text"></td></tr>
         <tr id="task-stats-request-success-cache-hit"><td>cache hit</td><td><meter value="0"></meter></td><td class="text"></td></tr>
+        <tr id="task-stats-request-success-local-cache-hit"><td>local cache hit</td><td><meter value="0"></meter></td><td class="text"></td></tr>
         <tr id="task-stats-request-success-retry"><td>retry</td><td><meter value="0"></meter></td><td class="text"></td></tr>
         <tr id="task-stats-request-local-run"><td>local run</td><td><meter value="0"></meter></td><td class="text"></td></tr>
         <tr id="task-stats-request-local-finished"><td>local finished</td><td><meter value="0"></meter></td><td class="text"></td></tr>
